--- a/校园导图/pages/schoolnavigation/store.wxml
+++ b/校园导图/pages/schoolnavigation/store.wxml
@@ -1,41 +1,43 @@
-<dl class="menu">
-      <dt data-index="0" bindtap="tapMainMenu">位置
-          <image src="/imgs/arrow.png" style="width:30rpx;height:30rpx;"></image>
-      </dt>
-      <dd class="{{subMenuDisplay[0]}}">
-        <ul>
-            <li class="{{subMenuHighLight[0][0]}}" data-index="0-0" bindtap="tapSubMenu">100米以内</li>
-            <li class="{{subMenuHighLight[0][1]}}" data-index="0-1" bindtap="tapSubMenu">100-500</li>
-            <li class="{{subMenuHighLight[0][2]}}" data-index="0-2" bindtap="tapSubMenu">500-1000</li>
-            <li class="{{subMenuHighLight[0][3]}}" data-index="0-3" bindtap="tapSubMenu">1000-3000</li>
-            <li class="{{subMenuHighLight[0][4]}}" data-index="0-4" bindtap="tapSubMenu">3000以上</li>
-        </ul>
-      </dd>
-</dl>
-<dl class="menu">
-      <dt data-index="0" bindtap="tapMainMenu2">品类
-          <image src="/imgs/arrow.png" style="width:30rpx;height:30rpx;"></image>
-      </dt>
-      <dd class="{{subMenuDisplay[1]}}">
-        <ul>
-            <li class="{{subMenuHighLight[1][0]}}" data-index="1-0" bindtap="tapSubMenu">川菜类</li>
-            <li class="{{subMenuHighLight[1][1]}}" data-index="1-1" bindtap="tapSubMenu">快餐类</li>
-            <li class="{{subMenuHighLight[1][2]}}" data-index="1-2" bindtap="tapSubMenu">奶茶饮品类</li>
-            <li class="{{subMenuHighLight[1][3]}}" data-index="1-3" bindtap="tapSubMenu">烧烤类</li>
-            <li class="{{subMenuHighLight[1][4]}}" data-index="1-4" bindtap="tapSubMenu">民族特色类</li>
-        </ul>
-      </dd>
-</dl>
-<dl class="menu">
-      <dt data-index="0" bindtap="tapMainMenu2">排序
-          <image src="/imgs/arrow.png" style="width:30rpx;height:30rpx;"></image>
-      </dt>
-      <dd class="{{subMenuDisplay[2]}}">
-        <ul>
-            <li class="{{subMenuHighLight[2][0]}}" data-index="0-0" bindtap="tapSubMenu">好评优先</li>
-            <li class="{{subMenuHighLight[2][1]}}" data-index="2-1" bindtap="tapSubMenu">位置优先</li>
-            <li class="{{subMenuHighLight[2][2]}}" data-index="2-2" bindtap="tapSubMenu">价格由低到高</li>
-            <li class="{{subMenuHighLight[2][3]}}" data-index="2-3" bindtap="tapSubMenu">价格由高到低</li>
-        </ul>
-      </dd>
-</dl>
+<view>
+<view class="filter">
+    <picker class="menu_father" bindchange="bindPickerChange1" value="{{index1}}" range="{{array1}}">
+        {{array1[index1]}}
+        <image src='../../imgs/arrow.png' style='margin: 0 auto;width:30rpx;height:30rpx;'></image>
+    </picker >
+
+    <picker class="menu_father" bindchange="bindPickerChange2" value="{{index2}}" range="{{array2}}">
+        {{array2[index2]}}
+        <image src='../../imgs/arrow.png' style='margin: 0 auto;width:30rpx;height:30rpx;'></image>
+    </picker>
+    <picker   class="menu_father"  bindchange="bindPickerChange3" value="{{index3}}" range="{{array3}}">
+      {{array3[index3]}}
+      <image src='../../imgs/arrow.png' style='margin: 0 auto;width:30rpx;height:30rpx;'></image>
+    </picker>
+       <!-- {{restaurant.FLOOR}}楼 -->
+</view>
+     <scroll-view  scroll-y="true" style="height: 90%"  lower-threshold="50" >
+    <view  wx:key="id" wx:for="{{restaurant_list}}" wx:for-item="restaurant" class="restaurant-item">
+      <view>
+        <image src="{{restaurant.IMAGEURL}}" class="img-responsive" bindtap="toCommodityrestaurantIndex" id="{{restaurant.id}}" />
+      </view>
+      <view class="restaurant-meta">
+        <view class="restaurant-name">{{restaurant.NAME}}</view>
+        <block wx:for="{{stars}}">
+          <image class="star-image" style="left: {{item*150}}rpx" src="{{key > item ?(key-item == 0.5?halfSrc:selectedSrc) : normalSrc}}">
+            <view class="item" style="left:0rpx" data-key="{{item+0.5}}" bindtap="selectLeft"></view>
+            <view class="item" style="left:75rpx" data-key="{{item+1}}" bindtap="selectRight"></view>
+            
+          </image>
+        </block>
+        <text style="float:right;position:absolute;font-size:27rpx;margin-right:60rpx;color: #999;">请选择星级评分</text>
+        <view class="restaurant-type-price">
+          <view class="restaurant-type">{{restaurant.INFO}}</view> 
+             <!-- <view class="restaurant-price">{{restaurant.price}}</view>  -->
+             <!-- {{restaurant.DRID}} -->
+          </view>
+        <view class="restaurant-address">{{restaurant.FLOORINFO}}</view>
+     
+      </view>
+    </view>
+  </scroll-view>      
+</view>
