--- a/校园导图/pages/schoolnavigation/store.wxss
+++ b/校园导图/pages/schoolnavigation/store.wxss
@@ -1,22 +1,89 @@
-.menu {display: block;margin-top:0;}
-/*一级菜单*/
-.menu dt {
-   font-size: 15px;float:left;width: 33%;height: 38px;border-right: 1px solid #d2d2d2;
-   border-bottom: 1px solid #d2d2d2; text-align: center;background-color: #f4f4f4; color: #5a5a5a;line-height: 38px;
+.filter {
+  display: flex;
+  flex-direction: row;
+  padding:0;
+  font-size: 14px;
 }
-/*二级菜单外部容器样式*/
-.menu dd{ position: absolute;width: 100%;top:39px; left:0;z-index:999;}
-/*二级菜单普通样式*/
-.menu li{
-   font-size: 14px; line-height: 34px;color: #575757;height: 34px;display: block;padding-left: 8px;
-   background-color: #fff;border-bottom: 1px solid #dbdbdb;
+.menu_father{
+   font-size: 15px;float:left;width: 33.33%;height: 38px; text-align: center;background-color: #f4f4f4; color: #5a5a5a;line-height: 38px;
 }
-.show {
+.menu_brother{
+  position: absolute;width: 100%;top:39px; left:0;z-index:999;
+}
+.menu_son{ 
+   font-size: 14px; 
+   line-height: 34px;
+   color: #575757;
+   height: 60rpx;
    display: block;
+   text-align: center;
+  background-color: #f4f4f4;
 }
-.hidden {
- display: none;
+.restaurant-item {
+  position: relative;
+  width: 100%;
+  height: 180rpx;
+  border-bottom: 2rpx solid #f2f2f2;
+  padding:20rpx;
+  font-size: 14px;
 }
-.menu li.highlight{
-   background-color: #f4f4f4;
+.img-responsive{
+  float:left;
+  width:230rpx;
+  height:150rpx;
+  margin:20rpx;
+}
+
+.star-image {
+  
+  
+  width: 40rpx;
+  height: 40rpx;
+  src: "../../imgs/normal.png";
+}
+
+.item {
+  position: absolute;
+  top: 50rpx;
+  width: 75rpx;
+  height: 150rpx;
+}
+
+.restaurant-item .restaurant-meta {
+  position: relative;
+  float: right;
+  width: 470rpx;
+  height: 180rpx;
+  
+}
+
+.restaurant-item .restaurant-meta .restaurant-name {
+  height: 40rpx;
+  padding-bottom: 10rpx;
+  font-size: 18px;
+  
+}
+
+
+.restaurant-item .restaurant-meta .restaurant-type {
+  float: left;
+  padding-bottom: 10rpx;
+  padding-right:30rpx;
+  font-size:14px;
+}
+
+ .restaurant-item .restaurant-meta .restaurant-price {
+  float: right;
+  padding-right: 20rpx;
+  bottom: 0;
+  color: #ea1218;
+
+} 
+
+.restaurant-item .restaurant-meta .restaurant-address {
+  margin-left:300rpx;
+  float: right;
+  position: absolute;
+  bottom: 0;
+  color: #999;
 }
